--- a/saperek (1).html
+++ b/saperek (1).html
@@ -47,12 +47,20 @@
             text-align: center;
 
         }
+        .easy{
+            width: 200px;
+        }
+        .normal{
+            width: 350px;
+        }
+        .hard{
+            width: 500px;
+        }
         button{
             background-color: #a59c99;
             border: collapse;
             min-height: 25px;
             min-width: 25px;
-            
         }
 
         button:hover{
@@ -79,14 +87,12 @@
         color: white;
         cursor: pointer;
         transition-duration: 0.4s;
-
-
         }
     </style>
     <script>
         var sekunda = 0;
         var t;
-        var q = 0;
+        var id = 0;
         function timer()
         {   
             if (sekunda < 100)
@@ -136,7 +142,7 @@
             {
                 for (var kolumna=0; kolumna<x; kolumna++)
                 {
-                    if(kolumna==x-1)
+                    if(kolumna==x)
                     {
                         var btn = document.createElement("button");
                         plansza.appendChild(btn);
@@ -148,15 +154,19 @@
                         plansza.appendChild(btn);
                     }
                     btn.setAttribute('class', 'przyciski');
-                    btn.setAttribute('id', String(q));
+                    btn.setAttribute('id', String(id));
                     btn.setAttribute('onclick', "alert('button clicked')");
-                    q+=1;
+                    id+=1;
                     console.log(btn);
                 }
             }
         }
         function latwy()
         {
+            const plansza = document.getElementById('plansza');
+            plansza.classList.remove('normal');
+            plansza.classList.remove('hard');
+            plansza.classList.add('easy');
             var t = [];
             for (var y=0; y<8; y++)
             { 
@@ -173,6 +183,10 @@
         }
         function sredni()
         {
+            const plansza = document.getElementById('plansza');
+            plansza.classList.remove('easy');
+            plansza.classList.remove('hard');
+            plansza.classList.add('normal');
             var t = [];
             for (var y=0; y<14; y++)
             {
@@ -189,6 +203,10 @@
         }
         function trudny()
         {
+            const plansza = document.getElementById('plansza');
+            plansza.classList.remove('normal');
+            plansza.classList.remove('easy');
+            plansza.classList.add('hard');
             var t = [];
             for (var y=0; y<20; y++)
             {
