--- a/saperek (1).html
+++ b/saperek (1).html
@@ -137,6 +137,7 @@
         }
         function pokaz(t, x, y)
         {
+            id = 0;
             var plansza = document.getElementById("plansza");
             for (var wiersz=0; wiersz<y; wiersz++)
             {
@@ -161,6 +162,10 @@
                 }
             }
         }
+        // function podmienzdjecie()
+        // {
+        //     if (document.getElementById(""))
+        // }
         function latwy()
         {
             const plansza = document.getElementById('plansza');
