--- a/saperek.html
+++ b/saperek.html
@@ -12,13 +12,14 @@
     <div id="timer">
         000
     </div>
-    <ul>
-
-        <li><button class='btn123' onclick="latwy()">Łatwy</button></li>
-        <li><button class='btn123' onclick="sredni()">Średni</button></li>
-        <li><button class='btn123' onclick="trudny()">Trudny</button></li>
-      </ul>
+    <div id="buttons">
+        <button class='btn123' onclick="latwy()">Łatwy</button>
+        <button class='btn123' onclick="sredni()">Średni</button>
+        <button class='btn123' onclick="trudny()">Trudny</button>
+    </div>
     <div id="plansza">
     </div>
+    <div id="div-flagi">Pozostałe flagi: <span id="pozostale-flagi"></span></div>
+
 </body>
 </html>
